--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           install: true
+          platforms: linux/amd64,linux/arm64
 
       - name: Log in to the registry
         uses: docker/login-action@v1
