Fix quickstart guide and add Mumbai support (#345)
* Fix quickstart guide, add python requirements

* Add NAT, BYTES opcodes, update INT semantics

* Export test results

* Fix types and tests

* Add tz4 and sr1 address types; Bump sandbox node image & params

* Update max ttl

* Fix ttl test case

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,5 +49,12 @@ jobs:
       - name: Run lint
         run: make lint
         if: contains(matrix.os, 'ubuntu') && contains(matrix.arch, 'amd64')
+
       - name: Run tests
-        run: make test
+        run: OSTYPE=$OSTYPE make test-ci
+
+      - name: Publish results
+        uses: EnricoMi/publish-unit-test-result-action/composite@v2
+        if: always()
+        with:
+          junit_files: "*.xml"
