--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install poetry
         run: pipx install poetry
 
+      - name: Configure poetry
+        run: poetry config installer.modern-installation false
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
