--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: Implementation :: CPython",
     "Topic :: Software Development :: Libraries :: Application Frameworks",
     "Typing :: Typed",
@@ -39,7 +40,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.12"
+python = ">=3.8.1,<3.13"
 attrs = ">=21.4.0"
 base58 = "^2.1.1"
 cattrs = ">=22.1.0"
@@ -56,7 +57,8 @@ ply = "^3.11"
 py-ecc = "^7.0.0"
 pysodium = "^0.7.10"
 python-dateutil = "^2.8.2"
-requests = "^2.28.2"
+# NOTE: https://github.com/docker/docker-py/issues/3256
+requests = ">=2.28.2,<2.32.0"
 secp256k1 = "^0.14.0"
 simplejson = "^3.17.6"
 strict-rfc3339 = "^0.7"
@@ -100,7 +102,7 @@ force_single_line = true
 
 [tool.black]
 line-length = 120
-target-version = ['py38', 'py39', 'py310', 'py311']
+target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
 skip-string-normalization = true
 
 [tool.ruff]
@@ -128,7 +130,7 @@ lint.ignore = [
     "SIM108",
     "SIM114",
 ]
-target-version = "py311"
+target-version = "py312"
 lint.extend-select = ["B", "C", "RET", "SIM"]
 
 [build-system]
