--- a/requirements.slim.txt
+++ b/requirements.slim.txt
@@ -1,50 +1,50 @@
-attrs==23.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-base58==2.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-cached-property==1.5.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-cattrs==23.2.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-certifi==2024.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-cffi==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-charset-normalizer==3.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-click==8.1.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
-colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Windows"
-cryptography==42.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-cytoolz==0.12.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "cpython"
-deprecation==2.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-docker==6.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-eth-hash==0.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-eth-typing==4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-eth-utils==4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-exceptiongroup==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.11"
-fastecdsa==2.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-idna==3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-importlib-resources==6.1.1 ; python_full_version >= "3.8.1" and python_version < "3.9"
-jsonschema-specifications==2023.12.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-jsonschema==4.21.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-mnemonic==0.21 ; python_full_version >= "3.8.1" and python_version < "3.12"
-netstruct==1.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-packaging==23.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+attrs==23.2.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+base58==2.1.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+cached-property==1.5.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
+cattrs==23.2.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
+certifi==2024.2.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
+cffi==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+charset-normalizer==3.3.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
+click==8.1.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
+colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.13" and platform_system == "Windows"
+cryptography==42.0.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
+cytoolz==0.12.3 ; python_full_version >= "3.8.1" and python_version < "3.13" and implementation_name == "cpython"
+deprecation==2.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+docker==6.1.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
+eth-hash==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+eth-typing==4.2.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
+eth-utils==4.1.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+exceptiongroup==1.2.1 ; python_full_version >= "3.8.1" and python_version < "3.11"
+fastecdsa==2.3.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
+idna==3.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
+importlib-resources==6.4.0 ; python_full_version >= "3.8.1" and python_version < "3.9"
+jsonschema-specifications==2023.12.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+jsonschema==4.22.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+mnemonic==0.21 ; python_full_version >= "3.8.1" and python_version < "3.13"
+netstruct==1.1.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
+packaging==24.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 pkgutil-resolve-name==1.3.10 ; python_full_version >= "3.8.1" and python_version < "3.9"
-ply==3.11 ; python_full_version >= "3.8.1" and python_version < "3.12"
-py-ecc==7.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pycparser==2.21 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pysodium==0.7.17 ; python_full_version >= "3.8.1" and python_version < "3.12"
-python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pywin32==306 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "win32"
-referencing==0.33.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-requests==2.31.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-rpds-py==0.18.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-secp256k1==0.14.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==69.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-simple-bson==0.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-simplejson==3.19.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-strict-rfc3339==0.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tabulate==0.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-testcontainers==3.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-toolz==0.12.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and (implementation_name == "pypy" or implementation_name == "cpython")
-tqdm==4.66.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-typing-extensions==4.9.0 ; python_full_version >= "3.8.1" and python_version < "3.11"
-urllib3==2.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-websocket-client==1.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wrapt==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-zipp==3.17.0 ; python_full_version >= "3.8.1" and python_version < "3.9"
+ply==3.11 ; python_full_version >= "3.8.1" and python_version < "3.13"
+py-ecc==7.0.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+pycparser==2.22 ; python_full_version >= "3.8.1" and python_version < "3.13"
+pysodium==0.7.17 ; python_full_version >= "3.8.1" and python_version < "3.13"
+python-dateutil==2.9.0.post0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+pywin32==306 ; python_full_version >= "3.8.1" and python_version < "3.13" and sys_platform == "win32"
+referencing==0.35.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+requests==2.31.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+rpds-py==0.18.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+secp256k1==0.14.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+setuptools==69.5.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+simple-bson==0.0.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
+simplejson==3.19.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
+six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+strict-rfc3339==0.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
+tabulate==0.9.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+testcontainers==3.7.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+toolz==0.12.1 ; python_full_version >= "3.8.1" and python_version < "3.13" and (implementation_name == "pypy" or implementation_name == "cpython")
+tqdm==4.66.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
+typing-extensions==4.12.0 ; python_full_version >= "3.8.1" and python_version < "3.11"
+urllib3==2.2.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+websocket-client==1.8.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+wrapt==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+zipp==3.19.0 ; python_full_version >= "3.8.1" and python_version < "3.9"
