--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -1,40 +1,30 @@
-name: Release
+name: Notify
 on:
   push:
     tags:
       - '*.*.0'
 
 jobs:
-  build:
-    name: Build
+  notify:
+    name: Notify
     runs-on: ubuntu-latest
     env:
       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
     steps:
     - uses: actions/checkout@master
-    - uses: dorny/paths-filter@v2
-      id: filter
-      with:
-        filters: |
-          changelog:
-            - 'CHANGELOG.md'
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: telegram notification
-      if: steps.filter.outputs.changelog == 'true'
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          Pytezos ${{ env.RELEASE_VERSION }} has been released 🎉
-          More info at https://github.com/baking-bad/pytezos/releases/tag/${{ env.RELEASE_VERSION }}
+          Pytezos ${{ github.ref_name }} has been released 🎉
+          More info at https://github.com/baking-bad/pytezos/releases/tag/${{ github.ref_name }}
     - name: slack notification
-      if: steps.filter.outputs.changelog == 'true'
       uses: Ilshidur/action-slack@master
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
       with:
         args: |
-          Pytezos ${{ env.RELEASE_VERSION }} has been released 🎉
-          More info at https://github.com/baking-bad/pytezos/releases/tag/${{ env.RELEASE_VERSION }}
+          Pytezos ${{ github.ref_name }} has been released 🎉
+          More info at https://github.com/baking-bad/pytezos/releases/tag/${{ github.ref_name }}
