--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,23 @@ jobs:
         include:
           - os: ubuntu-latest
             arch: amd64
+            python-version: '3.12'
           - os: ubuntu-latest
             arch: arm64
+            python-version: '3.12'
+          - os: ubuntu-latest
+            arch: amd64
+            python-version: '3.11'
+          - os: ubuntu-latest
+            arch: amd64
+            python-version: '3.10'
+          - os: ubuntu-latest
+            arch: amd64
+            python-version: '3.9'
+          - os: ubuntu-latest
+            arch: amd64
+            python-version: '3.8'
+
           # FIXME: docker.errors.DockerException: Error while fetching server API version
           # - os: macos-latest
           #   arch: amd64
@@ -34,14 +49,12 @@ jobs:
       - name: Install poetry
         run: pipx install poetry
 
-      - name: Configure poetry
-        run: poetry config installer.modern-installation false
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-          cache: 'poetry'
+          python-version: ${{ matrix.python-version }}
+          # FIXME: temporary
+          # cache: 'poetry'
 
       - name: Install binary dependencies
         run: OSTYPE=$OSTYPE make install-deps
@@ -51,7 +64,7 @@ jobs:
 
       - name: Run lint
         run: make lint
-        if: contains(matrix.os, 'ubuntu') && contains(matrix.arch, 'amd64')
+        if: contains(matrix.python-version, '3.12')
 
       - name: Run tests
         run: OSTYPE=$OSTYPE make test-ci
