--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,31 +42,30 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.13"
 attrs = ">=21.4.0"
-base58 = "^2.1.1"
+base58 = ">=2.1.1"
 cattrs = ">=22.1.0"
-click = "^8.1.3"
+click = ">=8.1.3"
 cryptography = ">=42.0.4"
-deprecation = "^2.1.0"
-docker = "^6.0.0"
-fastecdsa = "^2.2.3"
-jsonschema = "^4.3.2"
-mnemonic = "^0.21"
-netstruct = "^1.1.2"
+deprecation = ">=2.1.0"
+docker = ">=6.0.0"
+fastecdsa = ">=2.2.3"
+jsonschema = ">=4.3.2"
+mnemonic = ">=0.21"
+netstruct = ">=1.1.2"
 notebook = "^6.5.6"
-ply = "^3.11"
-py-ecc = "^7.0.0"
-pysodium = "^0.7.10"
-python-dateutil = "^2.8.2"
-# NOTE: https://github.com/docker/docker-py/issues/3256
-requests = ">=2.28.2,<2.32.0"
-secp256k1 = "^0.14.0"
-simplejson = "^3.17.6"
-strict-rfc3339 = "^0.7"
-tabulate = "^0.9.0"
-testcontainers = "^3.7.0"
-tqdm = "^4.62.3"
-setuptools = "^69.0.0"
-simple-bson = "^0.0.3"
+ply = ">=3.11"
+py-ecc = ">=7.0.0"
+pysodium = ">=0.7.10"
+python-dateutil = ">=2.8.2"
+requests = ">=2.28.2"
+secp256k1 = ">=0.14.0"
+simplejson = ">=3.17.6"
+strict-rfc3339 = ">=0.7"
+tabulate = ">=0.9.0"
+testcontainers = ">=3.7.0"
+tqdm = ">=4.62.3"
+setuptools = ">=70.1.0"
+simple-bson = ">=0.0.3"
 
 [tool.poetry.dev-dependencies]
 black = "*"
@@ -129,8 +128,11 @@ lint.ignore = [
     "SIM108",
     "SIM114",
 ]
-target-version = "py312"
+target-version = "py38"
 lint.extend-select = ["B", "C", "RET", "SIM"]
+
+[tool.mypy]
+python_version = "3.8"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
