--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pytezos"
-version = "3.13.0"
+version = "3.13.1"
 description = "Python toolkit for Tezos"
 license = "MIT"
 authors = [
@@ -52,7 +52,7 @@ fastecdsa = ">=2.2.3"
 jsonschema = ">=4.3.2"
 mnemonic = ">=0.21"
 netstruct = ">=1.1.2"
-notebook = "^6.5.6"
+notebook = ">=6.5,<7"
 ply = ">=3.11"
 py-ecc = ">=7.0.0"
 pysodium = ">=0.7.10"
