--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ argon2-cffi==23.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 arrow==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 asn1crypto==1.5.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 asttokens==2.4.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
-attrs==24.2.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+attrs<=24.2.0,>=23.2.0; python_full_version >= "3.8.1" and python_version < "3.13"
 backcall==0.2.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 base58==2.1.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 beautifulsoup4==4.12.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
