--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ asn1crypto==1.5.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 asttokens==2.4.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 attrs<=24.2.0,>=23.2.0; python_full_version >= "3.8.1" and python_version < "3.13"
 backcall==0.2.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
-base58==2.1.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+base58<=2.1.1,>=2.0.1; python_full_version >= "3.8.1" and python_version < "3.13"
 beautifulsoup4==4.12.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
 bleach==6.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 cached-property==1.5.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
