--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pytezos"
-version = "3.13.4"
+version = "3.13.5"
 description = "Python toolkit for Tezos"
 license = "MIT"
 authors = [
@@ -42,12 +42,12 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.13"
-attrs = ">=21.4.0"
-base58 = ">=2.1.1"
+attrs = "<=24.2.0,>=21.4.0"
+base58 = "<=2.1.1,>=2.0.1"
 cattrs = ">=22.1.0"
 click = ">=8.1.3"
-coincurve = ">=20.0.0"
-cryptography = ">=42.0.4"
+coincurve = "<=20.0.0,>=15.0.1"
+cryptography = ">=42.0.0"
 deprecation = ">=2.1.0"
 docker = ">=6.0.0"
 fastecdsa = ">=2.2.3"
