--- a/requirements.txt
+++ b/requirements.txt
@@ -28,14 +28,14 @@ deprecation==2.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 docker==7.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 entrypoints==0.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
 eth-hash==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
-eth-typing==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
-eth-utils==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+eth-typing<3.0.0,>=2.0.0; python_full_version >= "3.8.1" and python_version < "3.13"
+eth-utils<2.0.0,>=1.9.5; python_full_version >= "3.8.1" and python_version < "3.13"
 exceptiongroup==1.2.2 ; python_full_version >= "3.8.1" and python_version < "3.11"
 executing==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 fastecdsa==2.3.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
 fastjsonschema==2.20.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 fqdn==1.5.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
-hexbytes==1.2.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+hexbytess<1.0.0,>=0.1.0; python_full_version >= "3.8.1" and python_version < "3.13"
 idna==3.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
 importlib-metadata==8.2.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 importlib-resources==6.4.3 ; python_full_version >= "3.8.1" and python_version < "3.9"
@@ -58,7 +58,7 @@ jupyterlab-pygments==0.3.0 ; python_full_version >= "3.8.1" and python_version <
 markupsafe==2.1.5 ; python_full_version >= "3.8.1" and python_version < "3.13"
 matplotlib-inline==0.1.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
 mistune==3.0.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
-mnemonic==0.21 ; python_full_version >= "3.8.1" and python_version < "3.13"
+mnemonic>=0.21 ; python_full_version >= "3.8.1" and python_version < "3.13"
 nbclassic==1.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 nbclient==0.10.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 nbconvert==7.16.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
@@ -92,7 +92,7 @@ pywinpty==2.0.13 ; python_full_version >= "3.8.1" and python_version < "3.13" an
 pyyaml==6.0.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
 pyzmq==26.1.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 referencing==0.35.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
-requests==2.32.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
+requests>=2.32.3,<=2.31.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 rfc3339-validator==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
 rfc3986-validator==0.1.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 rpds-py==0.20.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
@@ -109,7 +109,7 @@ terminado==0.18.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 testcontainers==3.7.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 tinycss2==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 toolz==0.12.1 ; python_full_version >= "3.8.1" and python_version < "3.13" and (implementation_name == "pypy" or implementation_name == "cpython")
-tornado==6.4.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
+tornado>=6.4.1,<=6.1; python_full_version >= "3.8.1" and python_version < "3.13"
 tqdm==4.66.5 ; python_full_version >= "3.8.1" and python_version < "3.13"
 traitlets==5.14.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
 types-python-dateutil==2.9.0.20240316 ; python_full_version >= "3.8.1" and python_version < "3.13"
