--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ argon2-cffi==23.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 arrow==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 asn1crypto==1.5.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 asttokens==2.4.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
-attrs<=24.2.0,>=23.2.0; python_full_version >= "3.8.1" and python_version < "3.13"
+attrs<=24.2.0,>=21.4.0; python_full_version >= "3.8.1" and python_version < "3.13"
 backcall==0.2.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 base58<=2.1.1,>=2.0.1; python_full_version >= "3.8.1" and python_version < "3.13"
 beautifulsoup4==4.12.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
@@ -16,7 +16,7 @@ certifi==2024.7.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
 cffi==1.17.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 charset-normalizer==3.3.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
 click==8.1.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
-coincurve<=20.0.0,>=15.0.1; python_full_version >= "3.8.1" and python_version < "3.13"
+coincurve>=15.0.1,<18.0.0; python_full_version >= "3.8.1" and python_version < "3.13"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.13" and (platform_system == "Windows" or sys_platform == "win32")
 comm==0.2.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
 cryptography<=43.0.0,>=42.0.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
@@ -28,14 +28,14 @@ deprecation==2.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 docker==7.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 entrypoints==0.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
 eth-hash==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
-eth-typing<3.0.0,>=2.0.0; python_full_version >= "3.8.1" and python_version < "3.13"
-eth-utils<2.0.0,>=1.9.5; python_full_version >= "3.8.1" and python_version < "3.13"
+eth-typing>=2.0.0,<3.0.0; python_full_version >= "3.8.1" and python_version < "3.13"
+eth-utils>=1.9.5,<2.0.0; python_full_version >= "3.8.1" and python_version < "3.13"
 exceptiongroup==1.2.2 ; python_full_version >= "3.8.1" and python_version < "3.11"
 executing==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 fastecdsa==2.3.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
 fastjsonschema==2.20.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 fqdn==1.5.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
-hexbytess<1.0.0,>=0.1.0; python_full_version >= "3.8.1" and python_version < "3.13"
+hexbytess>=0.1.0,<1.0.0; python_full_version >= "3.8.1" and python_version < "3.13"
 idna==3.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
 importlib-metadata==8.2.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 importlib-resources==6.4.3 ; python_full_version >= "3.8.1" and python_version < "3.9"
@@ -92,7 +92,7 @@ pywinpty==2.0.13 ; python_full_version >= "3.8.1" and python_version < "3.13" an
 pyyaml==6.0.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
 pyzmq==26.1.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 referencing==0.35.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
-requests>=2.32.3,<=2.31.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+requests>=2.31.0,<=2.32.3; python_full_version >= "3.8.1" and python_version < "3.13"
 rfc3339-validator==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
 rfc3986-validator==0.1.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 rpds-py==0.20.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
@@ -109,7 +109,7 @@ terminado==0.18.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 testcontainers==3.7.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 tinycss2==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 toolz==0.12.1 ; python_full_version >= "3.8.1" and python_version < "3.13" and (implementation_name == "pypy" or implementation_name == "cpython")
-tornado>=6.4.1,<=6.1; python_full_version >= "3.8.1" and python_version < "3.13"
+tornado>=6.1,<=6.4.1; python_full_version >= "3.8.1" and python_version < "3.13"
 tqdm==4.66.5 ; python_full_version >= "3.8.1" and python_version < "3.13"
 traitlets==5.14.3 ; python_full_version >= "3.8.1" and python_version < "3.13"
 types-python-dateutil==2.9.0.20240316 ; python_full_version >= "3.8.1" and python_version < "3.13"
