--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,13 +46,13 @@ attrs = "<=24.2.0,>=21.4.0"
 base58 = "<=2.1.1,>=2.0.1"
 cattrs = ">=22.1.0"
 click = ">=8.1.3"
-coincurve = "<=20.0.0,>=15.0.1"
+coincurve = ">=15.0.1,<18.0.0"
 cryptography = ">=42.0.0"
 deprecation = ">=2.1.0"
 docker = ">=6.0.0"
 fastecdsa = ">=2.2.3"
 jsonschema = ">=4.3.2"
-mnemonic = ">=0.21"
+mnemonic = "<0.21,>=0.20"
 netstruct = ">=1.1.2"
 notebook = ">=6.5,<7"
 ply = ">=3.11"
