--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ jupyterlab-pygments==0.3.0 ; python_full_version >= "3.8.1" and python_version <
 markupsafe==2.1.5 ; python_full_version >= "3.8.1" and python_version < "3.13"
 matplotlib-inline==0.1.7 ; python_full_version >= "3.8.1" and python_version < "3.13"
 mistune==3.0.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
-mnemonic>=0.21 ; python_full_version >= "3.8.1" and python_version < "3.13"
+mnemonic<0.21,>=0.20 ; python_full_version >= "3.8.1" and python_version < "3.13"
 nbclassic==1.1.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 nbclient==0.10.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 nbconvert==7.16.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
