--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ base58 = "<=2.1.1,>=2.0.1"
 cattrs = ">=22.1.0"
 click = ">=8.1.3"
 coincurve = ">=15.0.1,<18.0.0"
-cryptography = ">=42.0.0"
+cryptography = "<=42.0.0,>=3.4.6"
 deprecation = ">=2.1.0"
 docker = ">=6.0.0"
 fastecdsa = ">=2.2.3"
