update jsonschema lib version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ cryptography = "<=42.0.0,>=3.4.6"
 deprecation = ">=2.1.0"
 docker = ">=6.0.0"
 fastecdsa = ">=2.2.3"
-jsonschema = ">=4.3.2"
+jsonschema = ">=3.2.0,<4.0.0"
 mnemonic = "<0.21,>=0.20"
 netstruct = ">=1.1.2"
 notebook = ">=6.5,<7"
