--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ jedi==0.19.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
 jinja2==3.1.4 ; python_full_version >= "3.8.1" and python_version < "3.13"
 jsonpointer==3.0.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 jsonschema-specifications==2023.12.1 ; python_full_version >= "3.8.1" and python_version < "3.13"
-jsonschema==4.23.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
+jsonschema>=3.2.0,<4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 jsonschema[format-nongpl]==4.23.0 ; python_full_version >= "3.8.1" and python_version < "3.13"
 jupyter-client==7.4.9 ; python_full_version >= "3.8.1" and python_version < "3.13"
 jupyter-core==5.7.2 ; python_full_version >= "3.8.1" and python_version < "3.13"
