--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ mnemonic = "<0.21,>=0.20"
 netstruct = ">=1.1.2"
 notebook = ">=6.5,<7"
 ply = ">=3.11"
-py-ecc = ">=7.0.0"
+py-ecc = "<7.0.0"
 pysodium = ">=0.7.10"
 python-dateutil = ">=2.8.2"
 requests = ">=2.28.2"
@@ -66,6 +66,9 @@ tabulate = ">=0.9.0"
 testcontainers = ">=3.7.0,<4.8.0"
 tqdm = ">=4.62.3"
 simple-bson = ">=0.0.3"
+eth-utils= ">=1.9.5,<2.0.0"
+hexbytes="<1,>=0.1.0"
+tornado= ">=6.1,<=6.4.1"
 
 [tool.poetry.dev-dependencies]
 black = "*"
