--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "pytezos"
-version = "3.13.5"
+name = "nobi-pytezos"
+version = "0.1.1"
 description = "Python toolkit for Tezos"
 license = "MIT"
 authors = [
@@ -15,8 +15,8 @@ maintainers = [
     "Igor Sereda <sereda.igor.s@gmail.com>",
 ]
 readme = "README.md"
-repository = "https://github.com/baking-bad/pytezos"
-homepage = "https://pytezos.org"
+repository = "https://github.com/nobbennob/nobi-pytezos" #"https://github.com/baking-bad/pytezos"
+homepage = "https://github.com/nobbennob/nobi-pytezos"
 keywords = ['tezos', 'blockchain', 'sdk', 'michelson', 'repl', 'cryptocurrencies', 'smart-contracts', 'jupyter', 'ipython', 'docker', 'crypto']
 classifiers = [
     "Development Status :: 5 - Production/Stable",
